--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "vite build && cp sitemap.xml dist/ && cp robots.txt dist/",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -30,7 +30,4 @@
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   }
-}
-"scripts": {
-  "build": "vite build && cp sitemap.xml dist/ && cp robots.txt dist/"
 }
