--- a/package.json
+++ b/package.json
@@ -1,76 +1,35 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dra. Angelita Lourenço – Advocacia Criminal</title>
+{
+  "name": "vite-react-typescript-starter",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .ts,.tsx"
+  },
+  "dependencies": {
+    "lucide-react": "^0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0",
+    "vite": "^5.4.2"
+  }
+}
 
-  <!-- Meta SEO -->
-  <meta name="description" content="Defesa Criminal com atuação em todo o estado do RJ. Agende sua consulta com a Dra. Angelita Lourenço.">
-
-  <!-- Meta Social (Open Graph) -->
-  <meta property="og:title" content="Dra. Angelita Lourenço – Advocacia Criminal" />
-  <meta property="og:description" content="Atuação em Defesa Criminal, Flagrantes, Audiência de Custódia e Tribunal do Júri." />
-  <meta property="og:image" content="https://angelitalourenco.netlify.app/assets/imagem-perfil.jpg" /> <!-- Substituir pelo caminho real da imagem -->
-  <meta property="og:url" content="https://angelitalourenco.netlify.app" />
-  <meta property="og:type" content="website" />
-
-  <!-- Twitter Cards -->
-  <meta name="twitter:title" content="Dra. Angelita Lourenço – Advocacia Criminal" />
-  <meta name="twitter:description" content="Defesa Criminal em todo o RJ. Atendimento humanizado e estratégico." />
-  <meta name="twitter:image" content="https://angelitalourenco.netlify.app/assets/imagem-perfil.jpg" />
-  <meta name="twitter:card" content="summary_large_image" />
-
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
-
-    .hero-img {
-      max-height: 90vh;
-      width: auto;
-      object-fit: contain;
-      display: block;
-      margin: auto;
-    }
-
-    .hero-container {
-      padding-top: 60px;
-    }
-
-    .mobile-menu a {
-      display: block;
-      padding: 10px;
-      text-decoration: none;
-      color: #000;
-    }
-  </style>
-</head>
-<body>
-  <!-- Menu com âncoras corretas -->
-  <nav class="mobile-menu">
-    <a href="#inicio">Início</a>
-    <a href="#sobre">Sobre</a>
-    <a href="#contato">Contato</a>
-  </nav>
-
-  <!-- Seções com IDs correspondentes -->
-  <section id="inicio">
-    <div class="hero-container">
-      <img src="assets/imagem-perfil.jpg" alt="Dra. Angelita Lourenço" class="hero-img">
-    </div>
-  </section>
-
-  <section id="sobre">
-    <h2>Sobre a Dra. Angelita Lourenço</h2>
-    <p>Especialista em Defesa Criminal com atuação em todo o estado do Rio de Janeiro.</p>
-  </section>
-
-  <section id="contato">
-    <h2>Contato</h2>
-    <p>Agende uma consulta. Atendimento personalizado e sigiloso.</p>
-    <a href="https://api.whatsapp.com/send?phone=SEUNUMERO" target="_blank">Fale pelo WhatsApp</a>
-  </section>
-</body>
-</html>
 
