--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp public/robots.txt dist/robots.txt && cp public/sitemap.xml dist/sitemap.xml",
     "preview": "vite preview",
     "lint": "eslint . --ext .ts,.tsx"
   },
@@ -31,5 +31,6 @@
     "vite": "^5.4.2"
   }
 }
+
 
 
